[package]
name = "after15"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
walkdir = "2.5"
colored = "2.1"
tabled = { version = "0.17", features = ["ansi"] }
unicode-width = "0.2"
printpdf = "0.7"

[profile.release]
lto = true
strip = true
opt-level = "z"
